--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geovisor Catastro Valle del Cauca</title>
-    <link rel="stylesheet" href="css/divs.css" type="css">
+    <link rel="stylesheet" href="css/divs.css" type="styles.css">
 </head>
 <body>
     <div id = "cabecera"></div>
