--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geovisor Catastro Valle del Cauca</title>
-    <link rel="stylesheet" href="css/divs.css" type="styles.css">
+    <link rel="stylesheet" type="styles.css" href="css/divs.css" >
 </head>
 <body>
-    <div id = "cabecera"></div>
+    <div id="cabecera">
+        Prueba
+    </div>
 </body>
 </html>
