--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geovisor Catastro Valle del Cauca</title>
-    <link rel="stylesheet" type="styles.css" href="css/divs.css" >
+    <link rel="stylesheet" type="text/css" href="css/gen.css" >
+    <link rel="stylesheet" type="text/css" href="css/divs.css" >
+    <link rel="stylesheet" type="text/css" href="css/text.css" >
+    
 </head>
 <body>
-    <div id="cabecera">
-        Prueba
+    <div class="cabecera">
+        <h1 class="h1">GECAV</h1>
+        <h2 class="h2"  id="h2_1">Geoportal Catastral<br>del Valle del Cauca</h2>
+    </div>
+    <div class="intro">
+        <p class="titulo" id="t1">Bienvenido al Geoportal del Catastro del Valle del Cauca</p>
+        <p class="parrafo" id="p1">Explora y descubre la riqueza geoespacial del hermoso Valle del Cauca a través de nuestro Geoportal del Catastro. Sumérgete en la riqueza de datos cartográficos y geoespaciales que ofrecen una visión completa de esta región colombiana.</p>
+        <p class="subtitulo" id="st2">Características Destacadas</p>
     </div>
 </body>
 </html>
