--- a/index.html
+++ b/index.html
@@ -10,14 +10,26 @@
     
 </head>
 <body>
-    <div class="cabecera">
-        <h1 class="h1">GECAV</h1>
-        <h2 class="h2"  id="h2_1">Geoportal Catastral<br>del Valle del Cauca</h2>
-    </div>
-    <div class="intro">
-        <p class="titulo" id="t1">Bienvenido al Geoportal del Catastro del Valle del Cauca</p>
-        <p class="parrafo" id="p1">Explora y descubre la riqueza geoespacial del hermoso Valle del Cauca a través de nuestro Geoportal del Catastro. Sumérgete en la riqueza de datos cartográficos y geoespaciales que ofrecen una visión completa de esta región colombiana.</p>
-        <p class="subtitulo" id="st2">Características Destacadas</p>
+    <div class="contenedor">
+        <div class="cabecera">
+            <div id="linea_titulo"></div>
+            <h1 class="h1">GECAV</h1>
+            <h2 class="h2"  id="h2_1">Geoportal Catastral<br>del Valle del Cauca</h2>
+        </div>
+        <div class="intro" id="cont_intro">
+            <img src="data/fondo_intro.jpg">
+            <div class="contenedor_intro">
+                <div class="intro" id="intro_titulo1">
+                    <p class="titulo" id="t1">Bienvenido al Geoportal del Catastro del Valle del Cauca</p>
+                </div>
+                <div class="intro" id="intro_parrafo">
+                    <p class="parrafo" id="p1">Explora y descubre la riqueza geoespacial del hermoso Valle del Cauca a través de nuestro Geoportal del Catastro. Sumérgete en la riqueza de datos cartográficos y geoespaciales que ofrecen una visión completa de esta región colombiana.</p>
+                </div>
+                <div class="intro" id="intro_subtitulo1">
+                    <p class="subtitulo" id="st2">Conoce nuestros servicios</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
